--- a/src/components/Structural/Header/Header.module.css
+++ b/src/components/Structural/Header/Header.module.css
@@ -8,6 +8,25 @@
 
 .headerContainer {
   display: flex;
+  background-color: var(--color-dark);
+  color: var(--color-light);
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1em;
+}
+
+.pageContent {
+  position: relative;
+  min-height: 100vh;
+}
+
+.children {
+  padding-bottom: 2.5rem;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 3rem;
 }
