--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,11 @@
     "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
     "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
+  --color-dark: rgb(17, 45, 78);
+  --color-med-1: rgb(63, 114, 175);
+  --color-med-2: rgb(219, 226, 239);
+  --color-light: rgb(249, 247, 247);
+
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -83,10 +88,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background-color: var(--color-light);
+  color: var(--color-dark);
 }
 
 a {
-  color: inherit;
   text-decoration: none;
 }
 
