--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -1,6 +1,12 @@
 .formContainer {
   margin: auto;
-  width: 50%;
+  width: 90%;
+}
+
+@media screen and (min-width: 720px) {
+  .formContainer {
+    width: 50%;
+  }
 }
 
 .textArea {
