--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,14 +3,17 @@
   margin: 0 auto;
 }
 
-.sideBySide {
-  display: flex;
+.selfImage {
+  margin-right: 1em;
+  height: 400px;
+  position: relative;
+  margin-bottom: 0.5em;
 }
 
-.selfImage {
-  flex: 0.75;
-  margin-right: 1em;
-  position: relative;
+@media screen and (min-width: 750px) {
+  .selfImage {
+    margin-bottom: 0;
+  }
 }
 
 .selfImage > img {
@@ -36,8 +39,4 @@
   text-align: center;
   font-size: 1.75rem;
   margin-bottom: 0.5em;
-}
-
-.halfColumn {
-  flex: 1;
 }
