--- a/src/components/Project/ProjectBar/ProjectBar.module.css
+++ b/src/components/Project/ProjectBar/ProjectBar.module.css
@@ -34,15 +34,17 @@
 }
 
 .image {
-  position: relative;
-  flex: 0.5;
-  height: 200px;
-  margin-right: 1rem;
+  display: flex;
+  max-height: 350px;
+  width: 100%;
   cursor: pointer;
 }
 
 .image > img {
+  height: 100%;
+  width: 100%;
   object-fit: contain;
+  margin: 0 auto;
 }
 
 .expandedInfo {
