--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -4,6 +4,7 @@
 }
 
 .selfImage {
+  display: flex;
   margin-right: 1em;
   height: 400px;
   position: relative;
@@ -18,6 +19,7 @@
 
 .selfImage > img {
   object-fit: contain;
+  margin: 0 auto;
 }
 
 .aboutMe {
